Conteúdo sobre o Site

--- a/themes/Book/layouts/partials/docs/title.html
+++ b/themes/Book/layouts/partials/docs/title.html
@@ -4,7 +4,7 @@
 -->
 {{ $title := "" }}
 
-{{ if .LinkTitle }}
+{{ if .Params.image }}
   {{ $title = .LinkTitle }}
 {{ else if .Title }}
   {{ $title = .Title }}
